infra/k8s/auth_deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authdeply
spec:
  replicas: 1
  selector:
    matchLabels:
      type: auth
  template:
    metadata:
      labels:
        type: auth
    spec:
      containers:
      - name: authcontainer
        image: diwa1214/dev:authimage
