infra/k8s/auth_db.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: authdb
spec:
  replicas: 1
  selector:
    matchLabels:
      type: auth-db-deployment
  template:
    metadata:
      labels:
        type: auth-db-deployment
    spec:
      containers:
        - name:  auth-db-container
          image: mongo 

---
apiVersion: v1
kind: Service 
metadata:
  name:  auth-db-service
spec:
  selector:
    type: auth-db-deployment
  ports:
  - name: auth-db-port
    port:  27017
    protocol: TCP
    targetPort: 27017
