infra/k8s/ingress_route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - host: ticketing.dev
      http:
         paths:
          - path: /api/users/?(.*) 
            pathType: Prefix
            backend:
              service:
                name:  authservice
                port:
                  number: 3000
            
          - path: /api/ticket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 5000
          - path: /api/order?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 4000
                  
          - path: /api/payment?(.*)
            pathType: Prefix
            backend:
               service:
                  name: payment-service
                  port: 
                    number: 9000

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: clientservice
                port:
                  number: 8000
